Added 'getting started' files for the IM1480 project portal assignment.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,45 @@
 <html>
   <head>
-    <!-- This is a comment  -->
+    <!-- This is an HTML comment  -->
+    
+    <!--
+    	1. UPDATE WITH YOUR INFO 
+    	Created by: YOUR NAME
+        Date: 01/07/13
+    -->
+    <style>
+		/* This is a CSS comment */
+		/* More info on CSS: http://www.w3schools.com/css/css_syntax.asp */
+		
+		/* 2. CUSTOMIZE THE STYLE OF YOUR INDEX PAGE HERE */
+		p {
+			color:blue;
+		}
+		
+		h1 {
+			color:darkblue;
+		}
+		
+		h2 {
+			color:black;
+			font-size:20px;
+			font-style:italic;
+		}
+		
+		body {
+			background-color:#CCC;
+		}
+	</style>
   </head>
   <body>
-    <h1>Heading 1</h1>
-    <p>Hello World</p>
+  	<!-- 3. UPDATE WITH YOUR CONTENT -->
+    <h1>Project Portal</h1>
+    <h2>Chris Black</h2>
+    <hr />
+    <ul>
+    	<li><a href="world/index.html">World Project<a></li>
+        <li><a href="banner/index.html">Banner Project<a></li>
+        <!-- 4. ADD LINKS TO YOUR REMAINING PROJECTS HERE -->
+    </ul>
   </body>
 </html>
