Added favorite links and new font.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		
 		h1 {
 			color:darkblue;
+			font-family:Verdana, Geneva, sans-serif;
 		}
 		
 		h2 {
@@ -35,11 +36,19 @@
   	<!-- 3. UPDATE WITH YOUR CONTENT -->
     <h1>Project Portal</h1>
     <h2>Chris Black</h2>
-    <hr />
+    <hr /> <!-- Horizontal Rule (draws a horizontal line) could also be written -->
+    <h3>My Project Pages</h3>
     <ul>
     	<li><a href="world/index.html">World Project<a></li>
         <li><a href="banner/index.html">Banner Project<a></li>
-        <!-- 4. ADD LINKS TO YOUR REMAINING PROJECTS HERE -->
+        <!-- 4. ADD RELATIVE LINKS TO YOUR REMAINING PROJECTS HERE -->
+    </ul>
+    
+    <h3>My Favorite Links</h3>
+    <ul>
+    	<li><a href="http://www.google.com/">Google<a></li>
+        <li><a href="http://www.amazon.com/">Amazon<a></li>
+        <!-- 5. ADD ABSOLUTE LINKS TO YOUR FAVORITE WEBSITES -->
     </ul>
   </body>
 </html>
