--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     
     <h3>My Favorite Links</h3>
     <ul>
+    	<li><a href="https://github.com/blackcj/ProjectPortal">GitHub<a></li>
     	<li><a href="http://www.google.com/">Google<a></li>
         <li><a href="http://www.amazon.com/">Amazon<a></li>
         <!-- 5. ADD ABSOLUTE LINKS TO YOUR FAVORITE WEBSITES -->
